# CinemaSite

./: db.sqlite3  manage.py  pyproject.toml  request_route.drawio
SettingsSite/: asgi.py  settings.py  urls.py  wsgi.py
card/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
card/migrations/: 0001_initial.py  0002_alter_film_year.py  0002_category.py  0002_hall_end_work_hall_getting_started.py  0002_menuitem.py  0002_payment.py  0003_alter_film_country_alter_film_director_and_more.py  0003_alter_hall_end_work_alter_hall_getting_started.py  0003_booking.py  0003_film_category.py  0004_alter_film_category.py  0004_booking_screening.py  0004_myuser.py  0004_screening_cinema.py  0005_booking_resault_price.py  0005_delete_myuser.py  0005_hall_number.py  0005_remove_category_id_alter_category_category_id_and_more.py  0006_alter_booking_resault_price.py  0006_cinema.py  0006_director_remove_film_director_film_director.py  0006_remove_film_cinemas_detals.py  0007_alter_film_img_url.py  0007_alter_profile_options.py  0007_profile_avatar_user.py  0008_alter_profile_options_profile_is_employer.py  0008_hall_cinema_halls.py  0008_remove_profile_avatar_user.py  0009_alter_cinema_halls.py  0009_cinema_fk_cinema_halls_alter_cinema_id_alter_hall_id.py  0010_alter_cinema_halls.py  0010_remove_cinema_fk_cinema_halls_cinema_fk_cinema_halls.py  0011_halls_films.py  0011_remove_cinema_halls_film_halls.py  0012_alter_film_halls.py  0012_remove_cinema_halls_detal.py  0013_remove_hall_time.py  0013_rename_halls_film_cinemas_detals.py  0014_cinema_halls_detal.py  (+9 more)
(+38 files in other folders)
