[tool.poetry]
name = "cinemasite"
version = "0.1.0"
description = ""
authors = ["Marvelous-A <mogneto.r@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-debug-toolbar = "^4.3.0"
django-mptt = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
